--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@page
 @model IndexModel
 @{
-    ViewData["Title"] = "Home page😀";
+    ViewData["Title"] = "Home page😀🤣";
 }
 
 <div class="text-center">
